<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View"/>

        <variable
            name="viewModel"
            type="com.natallialemiasheuskaya.mainmenu.MainViewModel">
        </variable>


    </data>


<ScrollView
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="#121313"
    tools:context="com.natallialemiasheuskaya.mainmenu.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <Button
        android:id="@+id/b_hw1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="HomeWork1"
        android:layout_marginBottom="10dp"
        android:background="#5fb7ad"
        android:textAllCaps="false"/>


    <Button
        android:id="@+id/b_hw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#5fb7ad"
        android:text="HomeWork2"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/b_hw3"
        android:layout_width="match_parent"
        android:background="#5fb7ad"
        android:layout_height="wrap_content"
        android:text="HomeWork3"
        android:layout_marginBottom="10dp"
        android:textAllCaps="false"/>

        <Button
            android:id="@+id/b_hw4"
            android:layout_width="match_parent"
            android:background="#5fb7ad"
            android:layout_height="wrap_content"
            android:text="HomeWork4"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/b_hw5"
            android:layout_width="match_parent"
            android:background="#5fb7ad"
            android:layout_height="wrap_content"
            android:text = "@string/hw_5"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"/>


        <Button
            android:id="@+id/b_hw6"
            android:layout_width="match_parent"
            android:background="#5fb7ad"
            android:layout_height="wrap_content"
            android:text = "@string/hw_6"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/b_hw7"
            android:layout_width="match_parent"
            android:background="#5fb7ad"
            android:layout_height="wrap_content"
            android:text="@string/hw_7"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/b_hw8"
            android:layout_width="match_parent"
            android:background="#5fb7ad"
            android:layout_height="wrap_content"
            android:text="@string/hw_8"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"/>


        <Button
            android:id="@+id/b_hw9"
            android:layout_width="match_parent"
            android:background="#5fb7ad"
            android:layout_height="wrap_content"
            android:text="@string/hw_9"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/b_test"
            android:layout_width="match_parent"
            android:background="#5fb7ad"
            android:layout_height="wrap_content"
            android:text="Test"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"/>

        <Button
            android:id="@+id/b_hw10"
            android:layout_width="match_parent"
            android:background="#5fb7ad"
            android:layout_height="wrap_content"
            android:text="@string/hw_10"
            android:layout_marginBottom="10dp"
            android:textAllCaps="false"/>


    </LinearLayout>


</ScrollView>

</layout>